@@ -1,3 +1,14 @@
+2013-06-17  Roland Levillain  <roland@lrde.epita.fr>
+
+	Use `perl -pi' instead of `sed -i' in Milena.
+
+	* doc/Makefile.am,
+	* doc/tools/clearbanner.sh,
+	* doc/tools/todoxygen.sh:
+	Here, as `sed -i' (with no backup file) behaves differently on
+	GNU/Linux and Mac OS X.  For more information, see:
+	http://stackoverflow.com/questions/5694228/.
+
 2013-06-13  Roland Levillain  <roland@lrde.epita.fr>
 
 	Update the documentation of mln_trace.
